Fixes Error Message Overflowing While Keeping Alignment
Fixes Error Message Overflowing While Keeping Alignment.

--- a/client/scss/components/_asset-display.scss
+++ b/client/scss/components/_asset-display.scss
@@ -1,8 +1,9 @@
 .asset-display {
   flex: 1 0 auto;
-  display: block;
+  display: flex;
   justify-content: center;
-  align-items: center;
+  /*align-items: center;*/
+  flex-direction: column;
 }
 
 .asset-image, .asset-video {
